Fixed event parsing (#34)
Fixed BallotCast event parsing/added job by id endpoint
